<resources>
    <string name="app_name">user_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="shopapp">ShopApp</string>
    <string name="login_now">Login Now?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="do_you_have_an_account_log_in">Do you have an account? <font color='#0000FF'>Log in</font></string>
    <string name="loading">Loading</string>
    <string name="submit">Success</string>
    <string name="failed">Failed</string>
    <string name="reset_password_now">Reset Password Now</string>
    <string name="we_will_send_password_reset_link_to_your_email">We will send password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="notify_reset_link">Reset link was sent to your email</string>
    <string name="hint_search">Tìm kiếm</string>
    <string name="setting">Settings</string>
    <string name="history_order">History order</string>
    <string name="edit_personal_detail">Edit personal detail</string>
    <string name="order">Order</string>
    <string name="my_name">Name</string>
    <string name="checking_order">Checking order</string>
    <string name="notifications">Notifications</string>
    <string name="other">Other</string>
    <string name="logout">Log out</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="example_name_product">Chair We will send password reset link to your email  We will send password reset link to your email</string>
    <string name="cost_product">129.000 vnđ</string>
    <string name="text_one">1</string>
    <string name="title_my_cart">My Cart</string>
    <string name="check_out">Check Out</string>
    <string name="_1_000_000_vn">1.000.000 vnđ</string>
    <string name="total">Total:</string>
    <string name="title">Title</string>
</resources>